--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <div id="root"></div>
+    <script
+      src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.8/kakao.min.js"
+      integrity="sha384-WUSirVbD0ASvo37f3qQZuDap8wy76aJjmGyXKOYgPL/NdAs8HhgmPlk9dz2XQsNv"
+      crossorigin="anonymous"
+    ></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
